Desktop Layout Complete

--- a/index.html
+++ b/index.html
@@ -31,44 +31,52 @@
         </div>
     </section>
     <section class="section-padding fill-white">
-        <div class="content-container">
+        <div class="content-container center-align">
             <h2>Some random information.</h2>
-            <div class="column">
-                <img src="" alt="" />
-                <p>this is some subtext under an illustration or image</p>    
-            </div>
-            <div class="column">
-                <img src="" alt="" />
-                <p>this is some subtext under an illustration or image</p>    
-            </div>
-            <div class="column">
-                <img src="" alt="" />
-                <p>this is some subtext under an illustration or image</p>    
-            </div>
-            <div class="column">
-                <img src="" alt="" />
-                <p>this is some subtext under an illustration or image</p>    
+            <div class="inner-container">
+                <div class="row">
+                    <div class="column">
+                        <img src="" alt="" />
+                        <p>this is some subtext under an illustration or image</p>    
+                    </div>
+                    <div class="column">
+                        <img src="" alt="" />
+                        <p>this is some subtext under an illustration or image</p>    
+                    </div>
+                    <div class="column">
+                        <img src="" alt="" />
+                        <p>this is some subtext under an illustration or image</p>    
+                    </div>
+                    <div class="column">
+                        <img src="" alt="" />
+                        <p>this is some subtext under an illustration or image</p>    
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <section class="section-padding fill-grey">
         <div class="content-container">
-            <p class="testimonial">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="testimonial-author">-Thor, God of Thunder</p>
+            <div class="inner-container">
+                <p class="testimonial">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="testimonial-author">-Thor, God of Thunder</p>
+            </div>
         </div>
     </section>
     <section class="section-padding fill-white">
-        <div class="content-container">
-            <div class="inner-container fill-secondary">
-                <div class="column">
-                    <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                </div>
-                <div class="column">
-                    <a class="button--outline" href="#">Sign up</a>
+        <div class="content-container call-to-action fill-secondary">
+            <div class="inner-container">
+                <div class="row">
+                    <div class="column col-75">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="column col-25">
+                        <a class="button button--outline" href="#">Sign up</a>
+                    </div>
                 </div>
             </div>
-        <div class="content-container">
+        </div>
     </section>
     <footer class="footer">
         <div class="content-container">
